content/boundary/v0.13.x/content/docs/install-boundary/install.mdx
---
layout: docs
page_title: Install Boundary
description: |-
 Install a self-managed version of Boundary
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Install Boundary

This guide outlines the required steps to manually install and configure a single HashiCorp Boundary cluster as defined in the [Recommended architecture](/boundary/docs/install-boundary/recommended-architecture) topic.
It assumes you install Boundary on virtual machines (VMs) or bare-metal servers running a Debian or Red Hat-based Linux distribution.

This document includes general guidance as well as specific recommendations for popular cloud infrastructure platforms.
These recommendations have also been encoded into official Terraform reference architectures for [AWS](https://github.com/hashicorp/boundary-reference-architecture/tree/main/deployment/aws), [Azure](https://github.com/hashicorp/boundary-reference-architecture/tree/main/deployment/azure), and [GCP](https://github.com/hashicorp/boundary-reference-architecture/tree/main/deployment/gcp).

Pre-built Boundary packages are available from the [HashiCorp Linux Repository](https://www.hashicorp.com/blog/announcing-the-hashicorp-linux-repository).
In addition to installing the Boundary binary, the official package also provides a systemd service unit, and a local `boundary` user account under which the service runs.

You must complete the following steps for each Boundary controller and worker node that you want to deploy.
The binary operates as either a worker or controller, depending on the subsequent configuration that you generate for the Boundary binary.

The steps vary by Linux distribution.
Select your distribution, and complete the steps to install Boundary.

<Tabs>
<Tab heading="Ubuntu/Debian">

1. Use the following command to add the HashiCorp GPC key as a trusted package-signing key:

    ```shell-session
    $ curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
    ```
1. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
    ```

1. Update the package index:

    ```shell-session
    $ sudo apt update
    ```

1. Install Boundary:

    ```shell-session
    $ sudo apt install boundary
    ```

</Tab>
<Tab heading="CentOS/RHEL">

1. Use the following command to install `yum-config-manager` to manage your repositories:

    ```shell-session
    $ sudo yum install -y yum-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
    ```

3. Install Boundary:

    ```shell-session
    $ sudo yum -y install boundary-enterprise
    ```

</Tab>

<Tab heading="Amazon Linux">

1. Use the following command to install `yum-config-manager` to manage your repositories:

    ```shell-session
    $ sudo yum install -y yum-utils shadow-utils
    ```

2. Add the official HashiCorp Linux repository:

    ```shell-session
    $ sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
    ```

3. Install Boundary:

    ```shell-session
    $ sudo yum -y install boundary-enterprise
    ```

</Tab>
</Tabs>
